Release v1.18.0: new architectures, image input, TTS, faster CPU path, RoPE/routing fixes
First published release since v1.16.1; it also ships the v1.17.0 work (SSD streaming for
MoE models larger than RAM, prefill output-projection fix, layer-outer MoE prefill,
--expert-top-k), which was never released on its own.

- New architectures: Hunyuan dense, Nanbeige, Spark2.5, Ling 3.0 (bailingmoe3); variants
  Qwen3-VL / Qwen2.5-VL text, LFM2-MoE, GLM4 MoE (glm4moe, previously rejected).
- Image input for Qwen3-VL, Qwen3.5 and Qwen2.5-VL (mmproj); Qwen3-TTS text-to-speech.
- CPU: MatmulPool dynamic dispatch, faster Q4_K/Q5_K/Q8_0 and IQ4_NL/IQ4_XS kernels,
  batched prefill for the standard engine and Qwen3.5, --threads and AVX-512 fixes.
- Fixes: NEOX RoPE for Gemma, NORM RoPE for dense GLM4 (GLM-4-9B PPL 5.45 -> 2.60),
  sigmoid + exp_probs_b routing and NextN skipping for GLM4 MoE, memory check no longer
  compares mmap'd weights with -Xmx.
- Build: java8 profile uses <release>8</release>; the jvm8 jar now runs on Java 8.

Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>